feat:(speakly-project/sprints#66): Implementacion de filtros de cursos y refact campos de curso